# metabolic_syndrome_service

./: .env.example  .gitignore  BACKEND_INTEGRATION_REPORT.md  CLAUDE.md  COPILOTKIT_VERIFICATION.md  FINAL_ACTION_PLAN.md  IMPLEMENTATION_PROGRESS.md  README.md  SCRIPTS_GUIDE.md  UI_REFACTOR_GUIDE.md  VECTOR_DB_SETUP_GUIDE.md  VERIFICATION_REPORT.md  package.json  start.bat  start.sh  구현전략.md
backend/: README.md  add_test_data.py  apply_schema.py  check_and_drop_tables.py  check_data_path.py  pyproject.toml  requirements.txt
backend/deploy/: README.md
backend/scripts/: populate_patient_data.py  verify_schema.py
backend/sql/: 001_add_patient_tables.sql  schema.sql
backend/src/metabolic_backend/: __init__.py  config.py  embeddings.py  logging_utils.py  metrics.py
backend/src/metabolic_backend/analysis/: __init__.py  classifier.py
backend/src/metabolic_backend/api/: __init__.py  patients.py  patients_sqlite.py  server.py  sessions.py
backend/src/metabolic_backend/cache/: __init__.py  faq.py
backend/src/metabolic_backend/database/: __init__.py  db_utils.py  graph_utils.py
backend/src/metabolic_backend/ingestion/: __init__.py  chunking.py  embedding.py  embedding_cache.py  models.py  pipeline.py  stores.py
backend/src/metabolic_backend/orchestrator/: __init__.py  api.py  guardrails.py  pipeline.py
backend/src/metabolic_backend/providers/: __init__.py  llm.py  neon.py
backend/src/metabolic_backend/retrievers/: __init__.py  (+2 more)
backend/tests/: test_api.py  test_db_pipeline.py  test_guardrails.py  test_ingestion_chroma.py  test_pipeline_integration.py
(+70 files in other folders)
