[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metabolic-backend"
version = "0.1.0"
description = "Adaptive RAG backend for Metabolic Syndrome Counselor Assistant"
requires-python = ">=3.11,<3.12"
license = {text = "Proprietary"}
authors = [
  {name = "Metabolic Counselor Team", email = "counselor@example.com"}
]
dependencies = [
  "langgraph>=1.0.2,<1.1.0",
  "graphiti-core>=0.22.0,<0.23.0",
  "psycopg[binary]>=3.2.12,<3.3.0",
  "neo4j>=6.0.2,<6.1.0",
  "networkx>=3.5,<3.6",
  "pydantic>=2.12.3,<2.13.0",
  "python-dotenv>=1.2.1,<1.3.0",
  "tiktoken>=0.12.0,<0.13.0",
  "fastapi>=0.121.0,<0.122.0",
  "uvicorn[standard]>=0.38.0,<0.39.0",
  "httpx>=0.28.1,<0.29.0",
  "numpy>=1.26.4,<2.0.0",
  "pandas>=2.3.3,<2.4.0",
  "scikit-learn>=1.7.2,<1.8.0",
  "accelerate>=1.11.0,<1.12.0",
  "openai>=1.12.0,<2.0.0",
  "nest-asyncio>=1.6.0,<1.7.0",
  "psycopg2-binary>=2.9.11",
  "langchain-openai>=1.0.2",
  "langchain-text-splitters>=1.0.0",
  "langchain-chroma>=1.0.0,<1.1.0",
  "chromadb>=1.0.20,<1.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["metabolic_backend*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
known_first_party = ["metabolic_backend"]
